added PUT, PATCH, and DELETE
