# build/swagger.json
@@ -26,6 +26,22 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Partial_Todo_": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"title": {
+						"type": "string"
+					},
+					"completed": {
+						"type": "boolean"
+					}
+				},
+				"type": "object",
+				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -104,6 +120,160 @@
 						}
 					}
 				}
+			}
+		},
+		"/todos/{id}": {
+			"put": {
+				"operationId": "UpdateTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"todo": {
+											"$ref": "#/components/schemas/Todo"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"todo",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Update an entire todo (replace)",
+				"tags": [
+					"Todos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The id of the todo to update",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "The new todo data",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Todo",
+								"description": "The new todo data"
+							}
+						}
+					}
+				}
+			},
+			"patch": {
+				"operationId": "PatchTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"todo": {
+											"$ref": "#/components/schemas/Todo"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"todo",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Partially update a todo",
+				"tags": [
+					"Todos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The id of the todo to patch",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"description": "Partial todo data",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Partial_Todo_",
+								"description": "Partial todo data"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "DeleteTodo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"description": "Delete a todo",
+				"tags": [
+					"Todos"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "The id of the todo to delete",
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
